--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-idle-timer": "^5.7.2",
     "react-modal": "^3.16.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.27.1"
