--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-countup": "^6.5.3",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.3.1",
     "react-idle-timer": "^5.7.2",
     "react-modal": "^3.16.1",
