--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-idle-timer": "^5.7.2",
     "react-modal": "^3.16.1",
+    "react-player": "^2.16.0",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.27.1"
   },
