--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^18.3.1",
     "react-idle-timer": "^5.7.2",
     "react-modal": "^3.16.1",
+    "react-motion-animate": "^1.0.6",
     "react-player": "^2.16.0",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.27.1"
   },
